@@ -268,6 +268,16 @@ void reset_multis_after(filestruct *fileptr, int mindex)
 	else
 	    break;
     }
+    for (; oof != NULL; oof = oof->next) {
+	alloc_multidata_if_needed(oof);
+	if (oof->multidata == NULL)
+	    continue;
+	if (oof->multidata[mindex] == CNONE)
+	    oof->multidata[mindex] = -1;
+	else
+	    break;
+    }
+    edit_refresh_needed = TRUE;
 }
 
 void reset_multis_before(filestruct *fileptr, int mindex)
@@ -282,6 +292,17 @@ void reset_multis_before(filestruct *fileptr, int mindex)
 	else
 	    break;
     }
+    for (; oof != NULL; oof = oof->prev) {
+	alloc_multidata_if_needed(oof);
+	if (oof->multidata == NULL)
+	    continue;
+	if (oof->multidata[mindex] == CNONE)
+	    oof->multidata[mindex] = -1;
+	else
+	    break;
+    }
+
+    edit_refresh_needed = TRUE;
 }
 
 
