@@ -1,4 +1,7 @@
 2009-02-08 Chris Allegretta <chrisa@asty.org>
+	* Make reset_multidata reset more lines, since contrary to previous problems the
+	  syntax highlting is now too *un*ambitious, causing display glitches when
+	  deleting a regex boundary.
 	* Add more multidata initliazers for new buffers and 'magic lines'.  Fixes segfaults
 	  with syntax highlighting in new buffers, initially reported by Mike Frysinger.
 
